--- a/index.html
+++ b/index.html
@@ -86,10 +86,12 @@
         }
 
         .content-section {
-            padding: 2rem;
+            padding: 3rem;
             transform: rotate(-1deg);
             background: #1a1a1a;
             margin-top: -1rem;
+            width: 100%;
+            max-width: 1000px;
         }
 
         .timestamp {
@@ -107,9 +109,9 @@
 
         .event-description {
             color: #999;
-            line-height: 1.8;
-            font-size: 1.1rem;
-            max-width: 800px;
+            line-height: 2;
+            font-size: 1.4rem;
+            max-width: 900px;
         }
 
         .location {
@@ -153,8 +155,8 @@
         }
 
         .description-line {
-            margin-bottom: 0.5rem;
-            line-height: 1.6;
+            margin-bottom: 0.8rem;
+            line-height: 2;
         }
     </style>
 </head>
@@ -175,7 +177,7 @@
                         "on my cheek."
                     ],
                     location: "Kreuzberg, Berlin",
-                    image: "/images/bus.jpg"
+                    image: "./images/bus.jpg"
                 },
                 {
                     date: "Few days later",
@@ -185,7 +187,7 @@
                         "cutest guy on earth as he cooked for me"
                     ],
                     location: "Kotbusser Tor, Berlin",
-                    image: "/images/cook.jpg"
+                    image: "./images/cook.jpg"
                 },
                 {
                     date: "August 7, 2024",
@@ -195,7 +197,7 @@
                         "but I think I have feelings for him",
                     ],
                     location: "Teufelssee",
-                    image: "/images/lake.jpg"
+                    image: "./images/lake.jpg"
                 }
             ];
 
