--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         .main-content {
             margin-left: 220px;
             padding-right: 2rem;
+            width: calc(100% - 220px);
         }
 
         .event-card {
@@ -87,11 +88,11 @@
 
         .content-section {
             padding: 3rem;
-            transform: rotate(-1deg);
+            transform: none;
             background: #1a1a1a;
             margin-top: -1rem;
             width: 100%;
-            max-width: 1000px;
+            max-width: none;
         }
 
         .timestamp {
@@ -111,7 +112,8 @@
             color: #999;
             line-height: 2;
             font-size: 1.4rem;
-            max-width: 900px;
+            width: 100%;
+            max-width: none;
         }
 
         .location {
@@ -177,7 +179,7 @@
                         "on my cheek."
                     ],
                     location: "Kreuzberg, Berlin",
-                    image: "./images/bus.jpg"
+                    image: "berghain-valentine/images/bus.jpg"
                 },
                 {
                     date: "Few days later",
@@ -187,7 +189,7 @@
                         "cutest guy on earth as he cooked for me"
                     ],
                     location: "Kotbusser Tor, Berlin",
-                    image: "./images/cook.jpg"
+                    image: "berghain-valentine/images/cook.jpg"
                 },
                 {
                     date: "August 7, 2024",
@@ -197,7 +199,7 @@
                         "but I think I have feelings for him",
                     ],
                     location: "Teufelssee",
-                    image: "./images/lake.jpg"
+                    image: "berghain-valentine/images/lake.jpg"
                 }
             ];
 
