--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         "on my cheek."
                     ],
                     location: "Kreuzberg, Berlin",
-                    image: "/images/bus.jpg"
+                    image: "images/bus.jpg"
                 },
                 {
                     date: "Few days later",
@@ -186,7 +186,7 @@
                         "cutest guy on earth as he cooked for me"
                     ],
                     location: "Kotbusser Tor, Berlin",
-                    image: "/images/cook.jpg"
+                    image: "images/cook.jpg"
                 },
                 {
                     date: "August 7, 2024",
@@ -196,7 +196,7 @@
                         "but I think I have feelings for him",
                     ],
                     location: "Teufelssee",
-                    image: "/images/lake.jpg"
+                    image: "images/lake.jpg"
                 }
             ];
 
